# ANPR-evalsys

./: README.md  pyproject.toml
data/samples/cropped/: Germany.csv  labels.csv
data/samples/german_plates_data/: Germany.csv
notebooks/: evaluate_ocr_only.ipynb
src/: main.py
src/app/: main.py  schemas.py
src/app/services/: anpr_service.py  crop.py  ocr.py  postprocess.py  preprocessing.py
src/app/utils/: evaluate.py  image_utils.py
