[project]
name = "anpr-evalsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
