[project]
name = "anpr-evalsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.136.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
